Fix landing spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -688,7 +688,7 @@ body {
       /*border-bottom: 2px solid #313131;*/ }
 
 .landing-greeting {
-  margin-top: 13rem;
+  margin-top: 22vh;
   margin-bottom: 2rem; }
   .landing-greeting h2 {
     font-family: 'Montserrat', sans-serif;
