--- a/public/scss/pages/_landing.scss
+++ b/public/scss/pages/_landing.scss
@@ -26,14 +26,13 @@
 }
 
 .landing-greeting {
-    margin-top: 13rem;
+    margin-top: 22vh;
     margin-bottom: 2rem;
 
     h2 {
         font-family: 'Montserrat', sans-serif;
         font-weight: 400;
-        font-size: 1.4rem;
-        //letter-spacing: 2px;   
+        font-size: 1.4rem; 
     }
 }
 
